# workflow

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: CI.yml
DGS/ARCS/powder/: README.md  create-nxs  reduce2iqe  scatter  test-scatter
DGS/generic/powder/: Makefile  create-nxs  reduce2iqe  sss.pml
DGS/generic/single-crystal/: README.md
DGS/sequoia/powder/: reduce2iqe
builders/conda-recipe/: build.sh  create_conda_pkg.sh  meta.yaml.template
builders/github-actions/: build_and_test.sh  conda_build_and_upload.sh
builders/travis/: build.sh
mcvine_workflow/: _shutil.py
mcvine_workflow/DGS/: ARCS.py
mcvine_workflow/cli/: __init__.py  powder.py  singlecrystal.py  sxr.py  sxu.py
mcvine_workflow/cli/sx/: __init__.py  orientation.py
mcvine_workflow/phonon/from_phonopy/: __init__.py  call_phonopy.py  dos.py  run.sh
mcvine_workflow/singlextal/: XtalOrientation.py  __init__.py  coords_transform.py  dynrange.py  misc.py  reduction.py  solve_psi.py  xtalori.py
mcvine_workflow/singlextal/resolution/: __init__.py  _beam.py  use_covmat.py  use_res_comps.py
mcvine_workflow/singlextal/scaffolding/: DGSresolution.py  __init__.py  deltafunction.py  phonon.py  sample.py  spinwave.py
notebook-examples/: getslice.ipynb
notebook-examples/ARCS/: reduction.ipynb
notebook-examples/ARCS/Si/: Tutorial-Resolution function-v1.ipynb  Tutorial-Resolution function.ipynb
share/notebook-examples/: getslice.ipynb
tests/DGS/ARCS/: Si.yml  singlecrystal_TestCase.py  sxu_TestCase.py
tests/DGS/CNCS/: powder_TestCase.py
tests/DGS/HYSPEC/: expected-Makefile  powder_TestCase.py
tests/data/: KVO.yml  V-plate.yml
tests/mcvine_workflow/: sample_TestCase.py
tests/mcvine_workflow/singlextal/: Si-xtalori.yaml  coords_transform_TestCase.py  dynrange_TestCase.py  misc_TestCase.py  solve_psi_TestCase.py  solve_psi_usingsampleyaml_TestCase.py  test_coords_transform.py  test_dynrange.py  test_misc.py  test_solve_psi.py  test_xtalori.py  xtalori_TestCase.py
tests/phonon/Si/: from_phonopy_TestCase.py
workflow/: __init__.py  sample.py
workflow/cli/: __init__.py  powder.py  singlecrystal.py  sxr.py  sxu.py
workflow/cli/sx/: dynamicalrange.py  orientation.py  reduce.py
workflow/sampleassembly/: __init__.py
workflow/sampleassembly/scaffolding/: DGSresolution.py  __init__.py  _kernel_helpers.py  deltafunction.py  phonon.py  phonon_powder_coherent.py  phonon_powder_incoherent.py  powderSQE.py  powder_analytical_dispersion.py  powder_diffraction.py  powder_elastic_incoherent.py  sample.py  sampleassembly_xml.py  singlecrystal_diffraction.py  spinwave.py  utils.py
workflow/singlextal/: XtalOrientation.py  __init__.py  coords_transform.py  dynrange.py  io.py  reduction.py  solve_psi.py
(+134 files in other folders)
